<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp">



<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <ImageView
        android:id="@+id/img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@mipmap/ic_launcher"
        />

    <TextView
        android:id="@+id/nombreappcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_app"
        android:layout_toEndOf="@+id/img"
        android:layout_toRightOf="@+id/img"
        />
    <TextView
        android:id="@+id/nombrepkgcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_pkg"
        android:layout_toEndOf="@+id/img"
        android:layout_toRightOf="@+id/img"
        android:layout_below="@+id/nombreappcontent"/>
    <TextView
        android:id="@+id/fechainstcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fecha_inst"
        android:layout_toEndOf="@+id/img"
        android:layout_toRightOf="@+id/img"
        android:layout_below="@+id/nombrepkgcontent"/>

</RelativeLayout>

</android.support.v7.widget.CardView>